# ai-support-agent

./: .gitignore  main.py  pyproject.toml  test_connection.py
chroma_db/: chroma.sqlite3
data/: policy.txt
src/: agent.py  api.py  ingest.py  rag.py  search.py  tools.py
